# SelfLLM

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  conftest.py  fly.toml  mkdocs.yml  personalize.yaml  plan-v6.md  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  run_self_improve.py  run_training.py  setup.py
.github/workflows/: ci.yml  deploy-pages.yml  perf.yml  training_monitor.yml
deploy/cloudrun/: deploy.sh
deploy/fly/: deploy.sh
docs/: CUSTOM_PROVIDER.md  SPEC-v3.md  SPEC-v4.md  VERTEX_AI.md  plan-v3.md  plan-v4.md  rag-stack-detailed-specs.md  rag-stack-plan.md
examples/personal_corpus/: ml_notes.txt  writing_style.txt
results/: V5_TRAINING_REPORT.md  training_summary.json  v5_pretrain_result.json  v5_recursive_metrics.json  v6_recursive_metrics.json
scripts/: benchmark.py  run_benchmark_smoke.py
selfllm/: __init__.py  __main__.py  config.yaml  dashboard.py  real_training.py  train.py  utils.py
selfllm/cloud/: __init__.py  rag_context.py  vertex_tuning.py
selfllm/cot/: __init__.py  cot_generator.py
selfllm/data/: pipeline.py
selfllm/debate/: __init__.py  agent.py  debate.py
selfllm/eval/: __init__.py  gsm8k.py  harness.py  humaneval.py  mmlu.py  regression.py  suite.py
selfllm/model/: __init__.py  attention.py  config.py  flash_attention.py  layers.py  long_context.py  lora.py  model.py  moe.py  quality_model.py  quantization.py  speculative.py  tokenizer.py  vision.py
selfllm/personalization/: __init__.py  frontier_config.py  personalize.py  profile.py
selfllm/reasoning/: __init__.py  base.py  beam_search.py  best_of_n.py  cot.py  eval_integration.py  extract.py  self_consistency.py  verifier.py
selfllm/recursive/: __init__.py  evaluator.py  recursive_config.py  recursive_trainer.py  report.py
selfllm/serving/: __init__.py  optimized.py  paged_cache.py  scheduler.py  server.py
selfllm/tools/: __init__.py  agent.py  parser.py  registry.py
selfllm/training/: __init__.py  constitutional_ai.py  data_generator.py  dataset.py  dpo_trainer.py  fsdp_trainer.py  ppo_trainer.py  quality_filter.py  reward_trainer.py  trainer.py
tests/: test_agent.py  test_cli_benchmark.py  test_constitutional_ai.py  test_cot.py  test_dashboard.py  test_dataset.py  test_debate.py  test_dpo.py  test_eval.py  test_flash_attention.py  test_fsdp.py  test_generation.py  test_kv_eviction.py  test_long_context.py  test_lora.py  test_model.py  test_moe.py  test_multimodal.py  test_optimized.py  test_paged_cache.py  test_personalization.py  test_ppo.py  test_quality_and_generation.py  test_quantization.py  test_rag_context.py  test_real_training.py  test_reasoning.py  test_reasoning_eval.py  test_reasoning_wave2.py  test_recursive.py  test_regression.py  test_report.py  test_reward_trainer.py  test_rope_overflow.py  test_serving.py  test_speculative.py  test_tokenizer.py  test_tools.py  test_train_cli.py  test_trainer.py  (+2 more)
